[package]
name = "cmps"
version = "0.1.1"
authors = ["Björn Daase <bjoern@daase.net>", "Leon Matthes <leon@matthes.biz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "cmps is short for compose, a tool used to create or fill files with a default content."
repository = "https://github.com/leonmatthes/cmps"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["compose", "file", "default", "template", "touch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
dirs = "3.0.1"
log = "0.4.11"
